# DistrictMaker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: algorithms.md  convergence-2026-05-15.md  convergence.md  data-sources.md  development-history.md  metrics.md  multi-start-ca-2026-05-15.md  multi-start-tx-2026-05-15.md  open-questions.md  q12-ctype-ca-2026-05-16.md
outputs/: summary.json  summary.md
outputs/AL/: districts.dbf  districts.shp  districts.shx  leader.json  leader.md  metrics.json
outputs/AR/: districts.dbf  districts.geojson  districts.shp  districts.shx  leader.json  leader.md  metrics.json
outputs/AZ/: districts.dbf  districts.shp  districts.shx  leader.json  leader.md  metrics.json
outputs/CA/: districts.dbf  districts.shx  leader.json  leader.md  metrics.json
outputs/CO/: districts.dbf  districts.shp  districts.shx  leader.json  leader.md  metrics.json
outputs/CT/: districts.dbf  districts.geojson  districts.shp  districts.shx  leader.json  leader.md  metrics.json
outputs/FL/: districts.dbf  districts.shp  districts.shx  leader.json  leader.md  metrics.json
outputs/GA/: districts.dbf  districts.shp  districts.shx  leader.json  leader.md  (+1 more)
scripts/: q12_ctype_ca_experiment.py  q12_verify_ctype_plumbing.py
tests/: test_adjacency.py  test_annealing.py  test_cli.py  test_compare.py  test_contiguity.py  test_data.py  test_experiments.py  test_kl_refine.py  test_metis.py  test_metrics.py  test_multi_start.py  test_output.py  test_run_experiment.py  test_scheduler.py  test_splitline.py  test_task_graph.py  test_validate.py
(+753 files in other folders)
